raspbian/iptables/rules.v4
*filter

# Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

#-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
# Disallow ping?
-A INPUT -p icmp -m icmp --icmp-type 8 -j REJECT
# Deny outgoing icmp (ok?)
-A OUTPUT -p icmp --icmp-type 3 -j REJECT

#
##
### Oye / licode
##
# Allow 3004 and 8080 internally
-A OUTPUT -p tcp --sport 3004 -d 127.0.0.0/8 -o lo -j ACCEPT
-A OUTPUT -p tcp --dport 3004 -d 127.0.0.0/8 -o lo -j ACCEPT
-A OUTPUT -p tcp --sport 8080 -d 127.0.0.0/8 -o lo -j ACCEPT
-A OUTPUT -p tcp --dport 8080 -d 127.0.0.0/8 -o lo -j ACCEPT

# Reject Nuve from public access, allow incoming requests
-A INPUT -p tcp --dport 3000 -j REJECT
-A OUTPUT -p tcp --dport 3000 -s 127.0.0.0/8 -j ACCEPT
-A OUTPUT -p tcp --sport 3000 -d 127.0.0.0/8 -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow UDP traffic
-A INPUT -p udp -j ACCEPT
-A OUTPUT -p udp -j ACCEPT

#
##
#

# Oye 3004, ErizoController 8080, not allowed
-A INPUT -p tcp --sport 3004 -j REJECT
-A INPUT -p tcp --dport 3004 -j REJECT
-A OUTPUT -p tcp --sport 3004 -j REJECT
-A OUTPUT -p tcp --dport 3004 -j REJECT
-A INPUT -p tcp --sport 8080 -j REJECT
-A INPUT -p tcp --dport 8080 -j REJECT
-A OUTPUT -p tcp --sport 8080 -j REJECT
-A OUTPUT -p tcp --dport 8080 -j REJECT

# Allows HTTP and HTTPS connections from anywhere (the normal ports for websites)
-A INPUT -p tcp --sport 80 -j ACCEPT
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --sport 443 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp --sport 80 -j ACCEPT
-A OUTPUT -p tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp --sport 443 -j ACCEPT
-A OUTPUT -p tcp --dport 443 -j ACCEPT

# SSH connections
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 22 -m state --state ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p tcp --sport 22 -m state --state ESTABLISHED,RELATED -j ACCEPT

# log iptables denied calls (access via 'dmesg' command)
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied INPUT: " --log-level 7
-A OUTPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied OUTPUT: " --log-level 7

# Reject all other
-A INPUT -j REJECT
-A OUTPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
